--- a/业务技巧/H5小项目/交互简历/css/index.less
+++ b/业务技巧/H5小项目/交互简历/css/index.less
@@ -29,7 +29,7 @@ body {
 
 /*公共样式*/
 .loadingBox,
-.phoneBox {
+.phoneBox ,.messageBox{
     // width: 100%;
     height: 100%;
     position: relative;
@@ -118,8 +118,9 @@ body {
 }
 
 .phoneBox {
+    display: none;
     z-index: -2;
-    display: block;
+    // display: block;
     background: url('../img/zf_phoneBg.jpg');
     background-size: cover; //cover采集覆盖的意思
 
@@ -237,5 +238,77 @@ body {
 
     to {
         transform: scale(0);
+    }
+}
+
+.messageBox {
+    display:block;
+    // width: 100%;
+    // height: 100%;
+    background: #eaeaea;
+    .warpper{
+        width: 100%;
+        // height: 
+        position: absolute;
+        top: 0.2rem;
+        left: 0;
+        transform: 0.3s;
+
+        li{
+            position: relative;
+            max-width: 3.6rem;
+            padding: 0.25rem;
+            margin-bottom: 0.4rem;
+            border-radius: 0.1rem;
+            line-height: 0.4rem;
+            font-size: 0.26rem;
+            //opacity: 0;//刚开始的时候让所有的li隐藏，根据需求让其出来
+            
+            //border:1px solid red;
+
+            .pic{
+                position: absolute;
+                top:0;
+                width:0.82rem;
+                height: 0.82rem;
+                border-radius: 50%;
+            }
+
+            &.active{
+                animation: messageListMove 0.3s linear 0s both;
+            }
+            
+            &.self{
+                float: left;
+                background: #fff;
+                border: 0.02rem solid #cacaca;
+                margin-left:1.25rem;
+                .pic{
+                    left : -1rem;
+                }
+            }
+
+            &.interviewer{
+                float: right;
+                background: #a2e45c;
+                border: 0.02rem solid #96b474;
+                margin-right:1.25rem;
+                .pic{
+                    right: -1rem;
+                }
+            }
+        }
+    }
+}
+
+@keyframes messageListMove {
+    from {
+        //透明度从0-1
+        opacity: 0;
+        //位置从应该所处位置向下偏移100px~正常位置
+        transform: translateY(1rem);
+    }to{
+        opacity: 1;
+        transform: translateY(0rem);
     }
 }
