--- a/业务技巧/H5小项目/交互简历/css/index.less
+++ b/业务技巧/H5小项目/交互简历/css/index.less
@@ -28,18 +28,17 @@ body {
 
 
 /*公共样式*/
-.loadingBox,
-.phoneBox ,.messageBox{
+.loadingBox, .phoneBox, .messageBox{
     // width: 100%;
+    //display:none;
     height: 100%;
     position: relative;
-    overflow: hidden;
+    overflow: hidden;   
 }
 
 /*LOADING BOX*/
 .loadingBox {
-    display: none;
-    // display: block;
+    display:none;
     background: #000;
     text-align: center;
     color: #fff;
@@ -117,8 +116,8 @@ body {
     }
 }
 
-.phoneBox {
-    display: none;
+.phoneBox {  
+    display:none;  
     z-index: -2;
     // display: block;
     background: url('../img/zf_phoneBg.jpg');
@@ -242,7 +241,9 @@ body {
 }
 
 .messageBox {
-    display:block;
+    display:none;
+    position: relative;
+    
     // width: 100%;
     // height: 100%;
     background: #eaeaea;
@@ -255,6 +256,7 @@ body {
         transform: 0.3s;
 
         li{
+           
             position: relative;
             max-width: 3.6rem;
             padding: 0.25rem;
@@ -262,9 +264,10 @@ body {
             border-radius: 0.1rem;
             line-height: 0.4rem;
             font-size: 0.26rem;
-            //opacity: 0;//刚开始的时候让所有的li隐藏，根据需求让其出来
+            opacity: 0;//刚开始的时候让所有的li隐藏，根据需求让其出来
             
             //border:1px solid red;
+
 
             .pic{
                 position: absolute;
@@ -272,6 +275,13 @@ body {
                 width:0.82rem;
                 height: 0.82rem;
                 border-radius: 50%;
+            }
+
+            .arrow{                
+                position: absolute;
+                top: 0.2rem;
+                width: 0.1rem;
+                height: 0.2rem;
             }
 
             &.active{
@@ -286,6 +296,11 @@ body {
                 .pic{
                     left : -1rem;
                 }
+                .arrow{
+                    background: url('../img/zf_messageArrow1.png') no-repeat;
+                    background-size: 100% 100%;
+                    left: -0.1rem;
+                }
             }
 
             &.interviewer{
@@ -293,12 +308,60 @@ body {
                 background: #a2e45c;
                 border: 0.02rem solid #96b474;
                 margin-right:1.25rem;
-                .pic{
+                .pic{                    
                     right: -1rem;
+                }
+                .arrow{
+                    background: url('../img/zf_messageArrow2.png') no-repeat;
+                    background-size: 100% 100%;
+                    right: -0.1rem;
                 }
             }
         }
+
+        
     }
+
+    //keyBoardBox 
+    .keyBoardBox{
+        width:100%;
+        height: 5.16rem;
+        position: absolute;
+        left: 0;
+        bottom: -0.54rem;
+        background: url('../img/zf_messageKeyboard.png') no-repeat; 
+        background-size: 100% 100%;
+        
+        transform: translateY(3.7rem) ;
+        transition: 0.3s;
+        
+        #inputText{
+            border: none;
+            position: absolute;
+            left: 0.9rem;
+            top:0.35rem;
+            // border:1px solid red;
+            width: 4rem;
+            height: 0.4rem; 
+            font-size: 0.25rem;
+        }
+
+        .submit{
+            display: none;
+            position: absolute;
+            width: 1.49rem;
+            height: 0.74rem;
+            right:0.1rem;
+            bottom:0.6rem;
+            // border: 1px solid red;
+            background: url('../img/zf_messageChat.png') no-repeat;
+            background-size: 100% 100%;
+        }
+        
+        
+    }
+
+
 }
 
 @keyframes messageListMove {
