--- a/业务技巧/H5小项目/交互简历/css/index.less
+++ b/业务技巧/H5小项目/交互简历/css/index.less
@@ -28,9 +28,9 @@ body {
 
 
 /*公共样式*/
-.loadingBox, .phoneBox, .messageBox{
+.loadingBox, .phoneBox, .messageBox, .cubeBox{
     // width: 100%;
-    //display:none;
+    display:none;
     height: 100%;
     position: relative;
     overflow: hidden;   
@@ -374,4 +374,12 @@ body {
         opacity: 1;
         transform: translateY(0rem);
     }
+}
+
+
+
+
+/*cubeBox*/
+.cubeBox{
+    background: #000;
 }
